import { render, screen, fireEvent } from "@testing-library/react"
import { describe, it, expect, vi } from "vitest"
import DelightfulButton from "../index"
import DelightfulThemeProvider from "../../ThemeProvider"

const renderWithTheme = (component: React.ReactElement) => {
	return render(<DelightfulThemeProvider theme="light">{component}</DelightfulThemeProvider>)
}

describe("DelightfulButton", () => {
	it("应该正确渲染按钮", () => {
		renderWithTheme(<DelightfulButton>测试按钮</DelightfulButton>)
		expect(screen.getByRole("button", { name: "测试按钮" })).toBeInTheDocument()
	})

	it("应该支持不同的按钮类型", () => {
		const { rerender } = renderWithTheme(<DelightfulButton type="primary">主要按钮</DelightfulButton>)
		expect(screen.getByRole("button")).toHaveClass("delightful-btn-primary")

		rerender(
			<DelightfulThemeProvider theme="light">
				<DelightfulButton type="dashed">虚线按钮</DelightfulButton>
			</DelightfulThemeProvider>,
		)
		expect(screen.getByRole("button")).toHaveClass("delightful-btn-dashed")
	})

	it("应该支持点击事件", () => {
		const handleClick = vi.fn()
		renderWithTheme(<DelightfulButton onClick={handleClick}>点击按钮</DelightfulButton>)

		fireEvent.click(screen.getByRole("button"))
		expect(handleClick).toHaveBeenCalledTimes(1)
	})

	it("应该支持禁用状态", () => {
		renderWithTheme(<DelightfulButton disabled>禁用按钮</DelightfulButton>)
		expect(screen.getByRole("button")).toBeDisabled()
	})

	it("应该支持加载状态", () => {
		renderWithTheme(<DelightfulButton loading>加载按钮</DelightfulButton>)
		expect(screen.getByRole("button")).toHaveClass("delightful-btn-loading")
	})

	it("应该支持自定义样式类名", () => {
		renderWithTheme(<DelightfulButton className="custom-class">自定义按钮</DelightfulButton>)
		expect(screen.getByRole("button")).toHaveClass("custom-class")
	})

	it("应该支持图标", () => {
		renderWithTheme(
			<DelightfulButton icon={<span data-testid="icon">🚀</span>}>带图标按钮</DelightfulButton>,
		)
		expect(screen.getByTestId("icon")).toBeInTheDocument()
	})

	it("应该支持 tooltip", () => {
		renderWithTheme(<DelightfulButton tip="这是一个提示">带提示按钮</DelightfulButton>)
		expect(screen.getByRole("button")).toBeInTheDocument()
	})

	it("当 hidden 为 true 时应该不渲染", () => {
		const { container } = renderWithTheme(<DelightfulButton hidden>隐藏按钮</DelightfulButton>)
		expect(container.firstChild).toBeNull()
	})

	it("应该支持不同的 justify 属性", () => {
		renderWithTheme(<DelightfulButton justify="flex-start">左对齐按钮</DelightfulButton>)
		const button = screen.getByRole("button")
		expect(button).toBeInTheDocument()
	})

	it("应该支持 ref 转发", () => {
		const ref = vi.fn()
		renderWithTheme(<DelightfulButton ref={ref}>Ref 按钮</DelightfulButton>)
		expect(ref).toHaveBeenCalled()
	})

	// Snapshot test
	describe("快照测试", () => {
		it("默认按钮快照", () => {
			const { asFragment } = renderWithTheme(<DelightfulButton>默认按钮</DelightfulButton>)
			expect(asFragment()).toMatchSnapshot()
		})

		it("主要按钮快照", () => {
			const { asFragment } = renderWithTheme(
				<DelightfulButton type="primary">主要按钮</DelightfulButton>,
			)
			expect(asFragment()).toMatchSnapshot()
		})

		it("虚线按钮快照", () => {
			const { asFragment } = renderWithTheme(
				<DelightfulButton type="dashed">虚线按钮</DelightfulButton>,
			)
			expect(asFragment()).toMatchSnapshot()
		})

		it("文本按钮快照", () => {
			const { asFragment } = renderWithTheme(<DelightfulButton type="text">文本按钮</DelightfulButton>)
			expect(asFragment()).toMatchSnapshot()
		})

		it("链接按钮快照", () => {
			const { asFragment } = renderWithTheme(<DelightfulButton type="link">链接按钮</DelightfulButton>)
			expect(asFragment()).toMatchSnapshot()
		})

		it("禁用状态按钮快照", () => {
			const { asFragment } = renderWithTheme(<DelightfulButton disabled>禁用按钮</DelightfulButton>)
			expect(asFragment()).toMatchSnapshot()
		})

		it("加载状态按钮快照", () => {
			const { asFragment } = renderWithTheme(<DelightfulButton loading>加载按钮</DelightfulButton>)
			expect(asFragment()).toMatchSnapshot()
		})

		it("带图标按钮快照", () => {
			const { asFragment } = renderWithTheme(
				<DelightfulButton icon={<span>🚀</span>}>带图标按钮</DelightfulButton>,
			)
			expect(asFragment()).toMatchSnapshot()
		})

		it("不同尺寸按钮快照", () => {
			const { asFragment: smallFragment } = renderWithTheme(
				<DelightfulButton size="small">小按钮</DelightfulButton>,
			)
			expect(smallFragment()).toMatchSnapshot()

			const { asFragment: largeFragment } = renderWithTheme(
				<DelightfulButton size="large">大按钮</DelightfulButton>,
			)
			expect(largeFragment()).toMatchSnapshot()
		})

		it("隐藏按钮快照", () => {
			const { asFragment } = renderWithTheme(<DelightfulButton hidden>隐藏按钮</DelightfulButton>)
			expect(asFragment()).toMatchSnapshot()
		})
	})
})
